# lrcup

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: publish.yml
lrcup/: __init__.py  __main__.py  challenge.py  controller.py
lrcup/audio/: __init__.py
