[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = [
    "version"
]
name = "lrcup"
authors = [
  { name = "iiPython", email = "ben@iipython.dev" },
]
description = "Python module and CLI for the LRCLIB API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1.7",
    "mutagen>=1.47.0",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
]

[project.urls]
Homepage = "https://github.com/iiPythonx/lrcup"
Issues = "https://github.com/iiPythonx/lrcup/issues"

[tool.hatch.version]
path = "lrcup/__init__.py"

[project.scripts]
lrcup = "lrcup.__main__:lrcup"
